fix: bug .getFirst()